# Babel

./: README.md
B-CPP_Babel/: CMakeLists.txt  clear.sh  compile.sh  conanfile.txt
B-CPP_Babel/client/include/: Error.hpp  LibAudio.hpp  Network.hpp
B-CPP_Babel/client/src/: Main.cpp  Network.cpp  Opus.cpp  PortAudio.cpp
B-CPP_Babel/server/: temp.cpp
B-CPP_Babel/server/include/: BabelServer.hpp  ServError.hpp
B-CPP_Babel/server/src/: AsioConnection.cpp  Error.cpp  Main.cpp
B-CPP_Babel/temp/: temp.cpp
B-CPP_Babel/temp/asio/: chat.hpp  client.cpp  server.cpp
B-CPP_Babel/temp/opus/: opus.cpp
B-CPP_Babel/temp/pa_tuto/: test.hpp  tuto_myver.cpp  tuto_pa.cpp
